css fixed, no shift, keep borders the same px size

--- a/src/css/small.css
+++ b/src/css/small.css
@@ -74,25 +74,6 @@ searchType {
 
 }
 
-#main-header nav {
-    display: flex;
-}
-
-#main-header nav ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-#main-header nav li {
-    margin-left: 1rem;
-}
-
-#main-header nav a {
-    text-decoration: none;
-    color: black;
-}
 
 #main-footer {
     background-color: #333;
@@ -127,25 +108,6 @@ searchType {
     display: none;
 }
 
-#main-nav {
-    background-color: #00FF00;
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-}
-
-#main-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-#main-nav a {
-    color: #fff;
-    text-decoration: none;
-    margin-right: 10px;
-}
 
 label,
 select,
@@ -160,15 +122,29 @@ ul {
 }
 
 .similar-artist {
-    width: 160px;
-    height: 160px;
-    margin: 20px;
+    width: 250px;
+    height: 250px;
+    margin: 30px;
     /* increase margin to add space between artists */
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding-bottom: 50px;
+    /* display: flex; */
+    /* flex-direction: column;
+    align-items: center; */
+    /* border: 4px solid transparent; */
+    /* add transparent border */
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 3px solid #fff;
+    box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.3);
+    transition: all 0.3s ease-in-out;
+
+}
+
+.similar-artist:hover {
+    transform: scale(1.1);
+    /* replace with the scale you want */
+    border: 3px green solid;
+
 }
 
 .similar-artist img {
@@ -182,12 +158,16 @@ ul {
     /* adjust font size for the artist name */
     margin-top: 10px;
     /* add margin to separate name from image */
+
+
 }
 
 .similar-artists-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-left: 0px;
+    grid-gap: 25px;
 }
 
 .similar-artists-list li {
@@ -195,4 +175,5 @@ ul {
     box-sizing: border-box;
     padding: 10px;
     height: fit-content;
+    position: absolute;
 }
